updating gitignore with scripts

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ desktop.ini
 
 # project instructions
 interview_instructions.md
+presentation_script.md
+spacex_ai_examples.md
+presentation_checklist.md
